--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Responsive -->
     <title>PSU Fitness</title>
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+	<!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="container">
@@ -43,6 +43,7 @@
         </div>
     </nav>
 
+    <!-- content -->
     <div id="content" class="container jumbotron">
         <h2 class="col-md-12">ยินดีต้อนรับสู่ ศูนย์บริหารร่างกาย (ฟิตเนส)</h2>
         <p class="col-md-12">
@@ -57,6 +58,7 @@
 
     </div>
 
+    <!-- footer -->
     <div id="footer" class="container-fluid footer">
         <div class="container copyright">
             <p>
