ลบ Directory .idea

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 	<!-- navbar -->
+	<!-- navbar fixed บนสุดของหน้าจอ-->
     <nav class="navbar navbar-default navbar-fixed-top"> <!-- navbar fixed บนสุดของหน้าจอ-->
         <div class="container-fluid">
             <div class="container">
