แก้ไข ลิงค์อัลบั้มภาพไม่ทำงาน

--- a/gallery.html
+++ b/gallery.html
@@ -59,22 +59,22 @@
         </p>
         <div class="row">
             <div class="col-md-4">
-                <a href="images/fitness-1.jpg" target="_blank"> <img src="images/fitness-1.jpg" class="img-responsive"><br /></a>
+                <a href="./images/fitness-1.jpg" target="_blank"> <img src="./images/fitness-1.jpg" class="img-responsive"></a><br />
             </div>
             <div class="col-md-4">
-                <a href="images/fitness-2.jpg" target="_blank"><img src="images/fitness-2.jpg" class="img-responsive"><br /></a>
+                <a href="./images/fitness-2.jpg" target="_blank"><img src="./images/fitness-2.jpg" class="img-responsive"></a><br />
+            </div>
+            <div class="./col-md-4">
+                <a href="./images/fitness-3.jpg" target="_blank"><img src="./images/fitness-3.jpg" class="img-responsive"></a><br />
             </div>
             <div class="col-md-4">
-                <a href="images/fitness-3.jpg" target="_blank"><img src="images/fitness-3.jpg" class="img-responsive"><br /></a>
+                <a href="./images/fitness-4.jpg" target="_blank"> <img src="./images/fitness-4.jpg" class="img-responsive"></a><br />
             </div>
             <div class="col-md-4">
-                <a href="images/fitness-4.jpg" target="_blank"> <img src="images/fitness-4.jpg" class="img-responsive"><br /></a>
+                <a href="./images/fitness-5.jpg" target="_blank"><img src="./images/fitness-5.jpg" class="img-responsive"></a><br />
             </div>
             <div class="col-md-4">
-                <a href="images/fitness-5.jpg" target="_blank"><img src="images/fitness-5.jpg" class="img-responsive"><br /></a>
-            </div>
-            <div class="col-md-4">
-                <a href="images/fitness-6.jpg" target="_blank"><img src="images/fitness-6.jpg" class="img-responsive"><br /></a>
+                <a href="./images/fitness-6.jpg" target="_blank"><img src="./images/fitness-6.jpg" class="img-responsive"></a><br />
             </div>
         </div>
 
