--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,7 @@
         <p>
 
         <!-- อัลบั้มภาพ -->
+        <!-- ในแต่ละภาพเมื่อคลิก Browser จะเปิดภาพนั้นๆในหน้าต่างใหม่ -->
         </p>
         <div class="row">
             <div class="col-md-4">
