Add equipment picture

--- a/equipment.html
+++ b/equipment.html
@@ -49,21 +49,21 @@
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"><h4>ลู่วิ่งไฟฟ้า - Treadmill</h4></div>
-                <div class="panel-body"></div>
+                <div class="panel-body"><img src="images/treadmill.jpg" class="img-responsive"><br /></div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"><h4>จักรยานออกกำลังกาย - Spinning Bike</h4></div>
-                <div class="panel-body"></div>
+                <div class="panel-body"><img src="images/spinning-bike.jpg" class="img-responsive"><br /></div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"> <h4>เครื่องสร้างกล้ามเนื้อ - Six Pack Care</h4></div>
-                <div class="panel-body"></div>
+                <div class="panel-body"><img src="images/six-pack-care.jpg" class="img-responsive"><br /></div>
             </div>
         </div>
     </div>
