--- a/usability-table.html
+++ b/usability-table.html
@@ -116,7 +116,65 @@
 
             </div>
 
-            
+            <div id="spinning-bik" class="tab-pane fade">
+                <h4 class="h4-text-align">จักรยานออกกำลังกาย - Spinning Bike</h4>
+                <p>
+                <div class="table-responsive content-usability-table-center">
+                    <table class="table table-bordered table-hover">
+                        <tr>
+                            <th>Trainee No.</th>
+                            <th>Date & Time</th>
+                            <th>Week No.</th>
+                            <th>Set No.</th>
+                            <th>Time No.</th>
+                            <th>Measurement</th>
+                        </tr>
+                        <tr>
+                            <td>00002</td>
+                            <td>14/05/2015 18.00</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>5</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                            <td>00008</td>
+                            <td>15/05/2015 08.00</td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>000016</td>
+                            <td>02/06/2015 17.00</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>00036</td>
+                            <td>14/06/2015 14.00</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>6</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <td>00080</td>
+                            <td>28/06/2015 19.30</td>
+                            <td>1</td>
+                            <td>3</td>
+                            <td>1</td>
+                            <td>25</td>
+                        </tr>
+                    </table>
+                </div>
+                </p>
+            </div>
+
+           
 
         </div>
     </div>
