add Six Pack Care table

--- a/usability-table.html
+++ b/usability-table.html
@@ -174,7 +174,63 @@
                 </p>
             </div>
 
-           
+            <div id="six-pack-care" class="tab-pane fade">
+                <h4 class="h4-text-align">เครื่องสร้างกล้ามเนื้อ - Six Pack Care</h4>
+                <p>
+                <div class="table-responsive content-usability-table-center">
+                    <table class="table table-bordered table-hover">
+                        <tr>
+                            <th>Trainee No.</th>
+                            <th>Date & Time</th>
+                            <th>Week No.</th>
+                            <th>Set No.</th>
+                            <th>Time No.</th>
+                            <th>Measurement</th>
+                        </tr>
+                        <tr>
+                            <td>00003</td>
+                            <td>15/05/2015 18.00</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>5</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                            <td>00009</td>
+                            <td>16/05/2015 08.00</td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>000015</td>
+                            <td>01/06/2015 17.00</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>00035</td>
+                            <td>16/06/2015 14.00</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>6</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <td>00079</td>
+                            <td>30/06/2015 19.30</td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>10</td>
+                        </tr>
+                    </table>
+                </div>
+                </p>
+            </div>
 
         </div>
     </div>
