แก้ไขผิด Branch

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
 
     <!-- content -->
     <div id="content" class="container jumbotron">
-        <h2>อัลบั้มภาพ</h2>
+        <h2>บรรยากาศสถานที่</h2>
         <p>
 
         <!-- อัลบั้มภาพ -->
