--- a/charge.html
+++ b/charge.html
@@ -48,9 +48,10 @@
     <div>
         <img src="./images/charge.jpg" class="img-responsive" width="80%">
     </div>
-
+<h3 class="col-md-12">หมายเหตุ หากบัตรหายหรือลืมบัตรปรับครั้งละ 10 บาท</h3>
 
 </div>
+
 
 <div id="footer" class="container-fluid footer">
     <div class="container copyright">
