แก้ไขไฟล์อัตราค่าบริการ

--- a/charge.html
+++ b/charge.html
@@ -44,11 +44,11 @@
 </nav>
 
 <div id="content" class="container jumbotron">
-    <h2 class="col-md-12">อัตราค่าบริการ</h2>
+    <h2 class="col-md-12">อัตราค่าบริการตามตารางด้านล่างคะ</h2>
     <div>
         <img src="./images/charge.jpg" class="img-responsive" width="80%">
     </div>
-<h3 class="col-md-12">หมายเหตุ หากบัตรหายหรือลืมบัตรปรับครั้งละ 10 บาท</h3>
+<h3 class="col-md-12">หมายเหตุ หากบัตรหายหรือลืมบัตรปรับครั้งละ 10 บาทครับผม</h3>
 
 </div>
 
