--- a/charge.html
+++ b/charge.html
@@ -51,7 +51,17 @@
 <h3 class="col-md-12">หมายเหตุ หากบัตรหายหรือลืมบัตรปรับครั้งละ 10 บาทครับผม</h3>
 
 </div>
-
+<div class="row">
+            <div class="col-md-4">
+                <a href="./images/fitness-4.jpg" target="_blank"><img src="./images/fitness-4.jpg" class="img-responsive"></a><br />
+            </div>
+            <div class="col-md-4">
+                <a href="./images/fitness-5.jpg" target="_blank"><img src="./images/fitness-5.jpg" class="img-responsive"></a><br />
+            </div>
+            <div class="col-md-4">
+                <a href="./images/fitness-6.jpg" target="_blank"><img src="./images/fitness-6.jpg" class="img-responsive"></a><br />
+            </div>
+        </div>
 
 <div id="footer" class="container-fluid footer">
     <div class="container copyright">
