--- a/equipment.html
+++ b/equipment.html
@@ -49,21 +49,30 @@
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"><h4>ลู่วิ่งไฟฟ้า - Treadmill</h4></div>
-                <div class="panel-body"><img src="images/treadmill.jpg" class="img-responsive"><br /></div>
+                <div class="panel-body">
+					<img src="images/treadmill.jpg" class="img-responsive"><br />
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/1LumDC2jEhw" frameborder="0" allowfullscreen></iframe>
+				</div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"><h4>จักรยานออกกำลังกาย - Spinning Bike</h4></div>
-                <div class="panel-body"><img src="images/spinning-bike.jpg" class="img-responsive"><br /></div>
+                <div class="panel-body">
+					<img src="images/spinning-bike.jpg" class="img-responsive"><br />
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/4svgZpoAHxU" frameborder="0" allowfullscreen></iframe>
+				</div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-primary">
                 <div class="panel-heading"> <h4>เครื่องสร้างกล้ามเนื้อ - Six Pack Care</h4></div>
-                <div class="panel-body"><img src="images/six-pack-care.jpg" class="img-responsive"><br /></div>
+                <div class="panel-body">
+					<img src="images/six-pack-care.jpg" class="img-responsive"><br />
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/evD4PcmlICQ" frameborder="0" allowfullscreen></iframe>
+				</div>
             </div>
         </div>
     </div>
