--- a/usability-table.html
+++ b/usability-table.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-
+<style type="text/css">
+tr:nth-child(even){background: #00bff3;}
+</style>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="container">
