--- a/usability-table.html
+++ b/usability-table.html
@@ -13,7 +13,9 @@
 
 <body>
 <style type="text/css">
-tr:nth-child(even){background: #00bff3;}
+tr:nth-child(even){background: #e1e1e1;}
+tr:nth-child(odd){background: #cccccc;}
+tr:nth-child(1){background: #00bff3;}
 </style>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
