เปลี่ยนสี หัวตาราง

--- a/usability-table.html
+++ b/usability-table.html
@@ -16,6 +16,12 @@
 tr:nth-child(even){background: #e1e1e1;}
 tr:nth-child(odd){background: #cccccc;}
 tr:nth-child(1){background: #00bff3;}
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  color: #fff;
+  background-color: #00bff3;
+}
 </style>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
