ใส่ banner หน้ารายงานการใช้งาน

--- a/usability-table.html
+++ b/usability-table.html
@@ -241,7 +241,9 @@ tr:nth-child(1){background: #00bff3;}
                 </div>
                 </p>
             </div>
-
+			<div style="width: 100%;">
+				<img src="images/fitness-banner2.jpg" style="width: 100%;">
+			</div>
         </div>
     </div>
 
