เพิ่มรูปในหน้า statistic.html

--- a/statistics.html
+++ b/statistics.html
@@ -65,7 +65,8 @@
     </div>
 
     <center>
-    <div id="statistics" class="col-md-12">
+	
+    <div id="statistics" class="col-md-7">
         <script src="http://ccchart.com/js/ccchart.js" charset="utf-8"></script>
         <canvas id="hoge"></canvas>
         <script>
@@ -91,6 +92,9 @@
             ccchart.init("hoge", chartdata51)
         </script>
     </div>
+	<div class="col-md-5">
+		<img src="images/fitness-model.jpg" style="width: 100%;">
+	</div>
     </center>
 
 </div>
