--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
     <h2 class="col-md-12">ติดต่อ</h2>
     <p class="col-md-12">
         ศูนย์กีฬาและสุขภาพ ศูนย์บริหารร่างกาย (ฟิตเนส) || โทร: 0-7428-9187, โทรสาร: 0-7428-9184<br />
+        มหาวิทยาลัยสงขลานครินทร์
     </p>
     <div id="maps" class="col-md-12">
         <p><iframe height="400px" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31680.810978163576!2d100.500985!3d6.997342!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304d29a4640dd867%3A0xe5da15033e1d133c!2z4Lio4Li54LiZ4Lii4LmM4LiB4Li14Lis4LiyL-C4ouC4tOC4oeC5gOC4meC5gOC4i-C4teC4ouC4oSDguJXguLPguJrguKUg4LiE4Lit4Lir4LiH4Liq4LmMIOC4reC4s-C5gOC4oOC4rSDguKvguLLguJTguYPguKvguI3guYgg4Liq4LiH4LiC4Lil4LiyIDkwMTEwLCBUaGFpbGFuZA!5e0!3m2!1sen!2sth!4v1444482492747"
